package code;

public interface CommandProcessor {
    void processCommands();
}
