package code.exceptions;

public class UnknownParameterException extends RuntimeException {
    public UnknownParameterException(String message) {
        super(message);
    }
}
